fix: use Math.clamp for SCIP heap budget